# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "hershey"
version = "0.1.2"
edition = "2021"

license = "Apache-2.0 OR LGPL-3.0"
description = "Hershey font format parser"
keywords = ["font", "format", "hershey"]

repository = "https://github.com/kicad-rs/hershey"
include = ["src/**/*", "LICENSE*"]

[dependencies]
itertools = "0.14"
thiserror = "2.0"
